src/styles/components/_card.scss
.card {
  background-color: none;
  padding: 0;
  border: none;
  position: relative;
  width: 100%;
  cursor: pointer;

  &::before {
    content: '';
    position: absolute;
    inset: 0;
    z-index: 5;
    background-color: hsla(0, 0%, 77%, 0.1);
    opacity: 0;
    transition: opacity 0.2s ease;
  }

  &:hover::before {
    opacity: 1;
  }
}

.card a {
  text-decoration: none;
}

.card__image {
  position: relative;
  z-index: 4;
}

.card__heading {
  margin-top: var(--space-s);
}

.card__stack {
  position: absolute;
  width: 100%;
  height: 100%;
  inset: 0;
  transition: transform 0.2s ease, box-shadow 0.2s ease;
}

.card[aria-expanded='true'] .card__stack:last-of-type {
  box-shadow: var(--card-shadow);
}

// .card:hover .card__stack:nth-of-type(2),
.card[aria-expanded='true'] .card__stack:nth-of-type(2) {
  transform: translate(0.5rem, 0.5rem);
  z-index: 3;
}

// .card:hover .card__stack:nth-of-type(3),
.card[aria-expanded='true'] .card__stack:nth-of-type(3) {
  transform: translate(1rem, 1rem);
  z-index: 2;
}

// .card:hover .card__stack:nth-of-type(4),
.card[aria-expanded='true'] .card__stack:nth-of-type(4) {
  transform: translate(1.5rem, 1.5rem);
  z-index: 1;
}

